--- a/FIPBYBSDS.html
+++ b/FIPBYBSDS.html
@@ -304,7 +304,18 @@ function popOpen(event, knowledgeNode) {
 //Try to reduce repeat items by combining similar ones with a phrasing that allows them to apply to both, and then use the same item in both places.
 
 /*
-TODO: Categories may include things like: job hunting, communication/people skills/meetings, management, brainstorming/planning, requirements, user interface/experience design, architecture, implementation, optimization, documentation, legal (for which I have very few tips, so hopefully a proper legal authority can contribute). I have a better list than this somewhere...
+TODO: Categories may include things like: job hunting, communication/people skills/meetings, management, brainstorming/planning, requirements, user interface/experience design, architecture, implementation, optimization, documentation, legal (for which I have very few tips, so hopefully a proper legal authority can contribute).
+
+Combine with this 'avenues of potential improvement' list I made a few weeks ago:
+People skills (communication, attitude, standards like work ethic)
+Project management (planning, project division into tickets, estimating time)
+Architecture (design tools, design patterns, new use case foresight)
+Design (design tools, design patterns, algorithm comprehension, technologies)
+Programming (coding tools, technologies, languages)
+Optimizing (algorithm comprehension, compiler comprehension, hardware comprehension)
+Testing (testing tools, tester mindset)
+Publishing (publishing tools, configuration)
+
 TODO: Sort categories roughly in chronological order.
 
 Being a great developer requires considering the human aspects of yourself, your teammates, your manager, and the users.
@@ -332,7 +343,8 @@ If someone questions a piece of code, add a comment addressing their concern (or
 **Job hunting
 **Anti-patterns
 **Accessibility (colorblind, weak vision, blind, deaf)
-**Globalization (language, encodings, decimals and commas, extra space for longer languages, right-to-left, fonts)
+**Globalization (language, encodings, decimals and commas, time zones, extra space for longer languages, right-to-left, fonts)
+**Parallel execution
 **Bonus: famous catch phrases. ITHare: Your Mileage May Vary. Lucian Radu Teodorescu (Do Repeat Yourself on ACCU): Don't Overdo It.
 Automate everything that reasonably can be automated, such as pulling the code and all the tools and dependencies (which helps new team members get up to speed), building, test execution (which can be run during check-in), code formatting (which can be run constantly or during the build process), static analysis, and publishing (including packaging resources). If it takes more than two tasks, it's probably too much work. This acts as documentation, reducing unspoken knowledge. Infrequent things are just as important to automate as frequent things because humans forget them more easily.
 Think about everything.
